--- a/products.html
+++ b/products.html
@@ -120,6 +120,7 @@
                 </ul>
             </div>
         </div>
+        <div class="vl"></div>
         <div class="right_side">
             <div class="top_section">
                 <h2>Fruits & Vegetables</h2>
@@ -135,9 +136,9 @@
                     </select>
                 </div>
             </div>
-            <h4>ALL PRODUCTS</h4>
+            <h4><span>ALL PRODUCTS</span></h4>
             <div class="bottom_section">
-                <div class="items">
+                <!-- <div class="items">
                     <img src="https://www.bigbasket.com/media/uploads/p/s/40192104_9-fresho-frozen-green-peas.jpg" alt="">
                     <p>Green peas</p>
                     <p>Rating 4</p>
@@ -145,15 +146,17 @@
                     <p>MRP Rs 900</p>
                     <button>ADD</button>
                 </div>
-                <!-- Render all products from Api here -->
+                Render all products from Api here
                 <div class="items"></div>
                 <div class="items"></div>
                 <div class="items"></div>
                 <div class="items"></div>
                 <div class="items"></div>
-                <div class="items"></div>
+                <div class="items"></div> --> -->
             </div>
         </div>
     </div>
 </body>
 </html>
+
+<script src="products.js"></script>
