--- a/basket.html
+++ b/basket.html
@@ -5,111 +5,132 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./cart.css" />
-    <script src="https://kit.fontawesome.com/a7c1ce01b0.js" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="./icons/site.webmanifest" />
+    <script
+      src="https://kit.fontawesome.com/a7c1ce01b0.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./basket.js"></script>
     <title>Basket</title>
   </head>
   <body>
+    <div id="header">
+      <!-- Grocery store header; -->
+    </div>
     <div id="body_container">
       <h1>Your Basket</h1>
-      <span>total items-</span><span id="nav_total_item">00</span>
-      <button id="empty_btn"><img src="./237706-200.png"></button><br>
-      <span id="empty_cart">Empty Cart</span>
+      <span>Total items-</span><span id="nav_total_item">0</span>
+      <button class="empty_cart" role="button">Empty Cart 🛒</button><br />
+      <!-- <span id="empty_cart">Empty Cart</span> -->
       <hr />
       <div id="basket_options">
-        <span>Item Descriptaion</span>
+        <!-- <span>Item Descriptaion</span>
         &nbsp;
         <span>Unit price</span>
         <span>quantity</span>
-        <span>subtotal</span>
+        <span>subtotal</span> -->
+        <div>Item Descrption</div>
+        <div>Unit Price</div>
+        <div>quantity</div>
+        <!-- <div></div> -->
       </div>
       <div id="basket_options_items">
-        <span>ITEM TITLE</span>
-        &nbsp;
-        <span>PRICE</span>
-        <span id="quantity"
-          ><button>-</button>
-          <span>0</span>
-          <button>+</button></span
-        >
-        <span>price of the item</span>
+        <div>
+          <div>Item descrption</div>
+          <div>Price of the item</div>
+          <div>
+            <button>-</button>
+            <span>0</span>
+            <button>+</button>
+          </div>
+        </div>
       </div>
       <hr />
       <div id="basket_checkout_info">
         <div id="combo_offer">
-          <p>Lorem ipsum dolor sit amet consectetur.</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos nam vitae iusto optio, perferendis voluptate.</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
+            corporis cumque rerum ex nostrum dolore.
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos nam
+            vitae iusto optio, perferendis voluptate.
+          </p>
         </div>
         <div id="checkout_details">
-            <br>
-          <span>subtotal</span>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <span>Rs. 0000</span>
           <br />
-          <br>
-          <span>delivery charges</span>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-          <span>Rs. 80</span>
-          <hr />
-          <span >Total</span>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <span>Rs. 0000</span>
+          <span>Subtotal</span>
+          <span>Rs. 0</span>
           <br />
-          <br>
-          <br>
-          <span>for this order accepted food cupon is 10% Discount</span>
+          <br />
+          <span>Delivery charges</span>
+          <span>Rs. 80/-</span>
           <hr />
-          <button>Checkout ➡️</button>
-          <span>**Actual delivery charges computed at checkout time</span>
+          <span>Total</span>
+          <span>Rs. 0</span>
+          <br />
+          <br />
+          <br />
+          <span>For this order accepted food cupon is <b>10% Discount</b></span>
+          <hr />
+          <button class="button-57" role="button">
+            <span class="text">Checkout▶️</span><span>For Payment</span>
+          </button>
+          <span id="comment"
+            >**Actual delivery charges computed at checkout time</span
+          >
         </div>
       </div>
-      <div id="missed_deals">
-
-        <!-- fetch 5 products for best deals -->
-
+      <div>
+        <button class="button-86" role="button" href="">Continue Shopping</button>
       </div>
+
+      <div id="missed_deals">
+        <h1>Missed Something?</h1>
+        <hr />
+        <!-- fetch 5 products for best deals -->
+        <div id="products_missed">
+          <div id="products_missed_child">
+            <img
+              src="https://www.bigbasket.com/media/uploads/p/l/10000273_16-fresho-mushrooms-button.jpg"
+            />
+            <h2>price</h2>
+            <h3>title</h3>
+            <button>add to cart</button>
+          </div>
+          <div id="products_missed_child">
+            <img
+              src="https://www.bigbasket.com/media/uploads/p/l/10000273_16-fresho-mushrooms-button.jpg"
+            />
+            <h2>price</h2>
+            <h3>title</h3>
+            <button>add to cart</button>
+          </div>
+          <div id="products_missed_child">
+            <img
+              src="https://www.bigbasket.com/media/uploads/p/l/10000273_16-fresho-mushrooms-button.jpg"
+            />
+            <h2>price</h2>
+            <h3>title</h3>
+            <button>add to cart</button>
+          </div>
+          <div id="products_missed_child">
+            <img
+              src="https://www.bigbasket.com/media/uploads/p/l/10000273_16-fresho-mushrooms-button.jpg"
+            />
+            <h2>title</h2>
+            <h3>price</h3>
+            <button>add to cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+      <!-- Insert the footer of Grocery store  -->
     </div>
   </body>
 </html>
