--- a/address.html
+++ b/address.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="icon" href="https://files.slack.com/files-pri/T04EMK3MT2N-F04F0H03C2G/grocery_store.png" type="image/x-icon"> -->
-     <title>address.html</title> 
+     <title>Address Page</title> 
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet"
@@ -42,21 +41,21 @@
               <label for="first_name">
                 <sup class="star">*</sup> Enter first name</label
               >
-              <input type="text" id="first_name" required />
+              <input type="text" id="first_name"/>
             </div>
 
             <div class="name">
               <label for="last_name">
                 <sup class="star">*</sup> Enter last name</label
               >
-              <input type="text" id="last_name" />
+              <input type="text" id="last_name"/>
             </div>
 
             <div class="name">
               <label for="contact">
                 <sup class="star">*</sup> Enter Contact Number</label
               >
-              <input type="text" id="contact" />
+              <input type="text" id="contact"/>
             </div>
           </div>
 
@@ -66,7 +65,7 @@
             <div class="first_add name_line">
               <div class="name">
                 <label for="house"><sup class="star">*</sup> House No</label>
-                <input type="text" id="house" />
+                <input type="text" id="house"/>
               </div>
               <div class="name x">
                 <label for="apartment">Enter Apartment name</label>
