--- a/payment.html
+++ b/payment.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="https://files.slack.com/files-pri/T04EMK3MT2N-F04F0H03C2G/grocery_store.png" type="image/x-icon">
-    <title>Payment/id/1</title>
+    <title>Payment Gateway</title>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet"
