--- a/basket.html
+++ b/basket.html
@@ -10,17 +10,17 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="manifest" href="./icons/site.webmanifest" />
+    <link rel="stylesheet" type="text/css" href="Styles/homepage.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script
       src="https://kit.fontawesome.com/a7c1ce01b0.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./basket.js"></script>
+    
     <title>Basket</title>
   </head>
   <body>
-    <div id="header">
-      <!-- Grocery store header; -->
-    </div>
+    <div id="heading"> </div>
     <div id="body_container">
       <h1>Your Basket</h1>
       <span>Total items-</span><span id="nav_total_item">0</span>
@@ -129,8 +129,7 @@
         </div>
       </div>
     </div>
-    <div id="footer">
-      <!-- Insert the footer of Grocery store  -->
-    </div>
+    <div id="footer_div"></div>
   </body>
 </html>
+<script type="module" src="./basket.js"></script>
