--- a/address.html
+++ b/address.html
@@ -10,9 +10,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./address.css" />
-  </head>
+    <link rel="stylesheet" type="text/css" href="Styles/homepage.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+</head>
 
   <body>
+    <div id="heading"> </div>
     <!-- header  -->
     <div id="head">
       <div id="BBimg">
@@ -129,22 +132,22 @@
             <div class="values">
               <div class="basket_value">
                 <p>Basket Value</p>
-                <div id="Rs1">00</div>
+                <div id="Rs1"></div>
               </div>
               <div class="basket_value">
                 <p>Delivery Charges</p>
-                <div id="Rs2">00</div>
+                <div id="Rs2">80</div>
               </div>
             </div>
             <div class="values noBorder">
               <div class="basket_value">
                 <p class="bv total">Total Amout : </p>
-                <div id="Rs3">00</div>
+                <div id="Rs3"></div>
               </div>
               <div id="last">
                 <div id="last_inside">
                   <p>Total Savings</p>
-                  <div id="Rs4">00</div>
+                  <div id="Rs4"></div>
                 </div>
               </div>
             </div>
@@ -175,8 +178,9 @@
         </div>
       </div>
     </div>
+    <div id="footer_div"></div>
   </body>
 </html>
-<script src="./address.js" >
+<script type="module" src="./address.js" >
 
 </script>
