--- a/products.html
+++ b/products.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
     <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" type="text/css" href="Styles/homepage.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
+    <div id="heading"> </div>
     <div class="main">
         <div class="left_side">
             <div class="category">
@@ -156,7 +159,8 @@
             </div>
         </div>
     </div>
+    <div id="footer_div"></div>
 </body>
 </html>
 
-<script src="products.js"></script>
+<script type="module" src="products.js"></script>
