Abhi day-4 work

--- a/adminpanel.html
+++ b/adminpanel.html
@@ -20,11 +20,12 @@
         <div id="add_item_form">
             <h1>Add Product to API  </h1>
             <form action="">
-                <label for="">Product Name</label><br>
+                <label for="product">Product Name</label><br>
+                
                 <input id="name" type="text" placeholder="Product name"> <br>
                 <label for="">Price of Product</label><br>
                 <input id="price" type="number" placeholder="Product Price"><br>
-                <label id="" for="">Rating</label> <br>
+                <label id="" for="rating">Rating</label> <br>
                 <input type="number" id="rating" placeholder="Rating"><br>
                 <label for="">Image URL</label><br>
                 <input id="img" type="text" placeholder="URL"><br>
