--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://i.ibb.co/BsYPv6t/Grocery-Store.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://i.ibb.co/BsYPv6t/Grocery-Store.png" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/BsYPv6t/Grocery-Store.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="signup.css">
     <title>Account Registration</title>
     <style>
