--- a/address.html
+++ b/address.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="./address.css" />
     <link rel="stylesheet" type="text/css" href="Styles/homepage.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="icon" href="https://i.ibb.co/BsYPv6t/Grocery-Store.png" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/BsYPv6t/Grocery-Store.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 
   <body>
