--- a/adminlogin.html
+++ b/adminlogin.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://i.ibb.co/BsYPv6t/Grocery-Store.png" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/BsYPv6t/Grocery-Store.png" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/BsYPv6t/Grocery-Store.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="adminlogin.css">
     <!-- Scripts file -->
     <title>Log In</title>
