--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
             <p>Fruits & Vegetables</p>
             <div id="Fruit_vege_id">
 
-                <img
-                    src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_organic-fnc-fnv_Storefront_m_251122_01.jpg">
-                <img
-                    src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_fresh-fruits-fnv_Storefront_m_251122_02.jpg">
-                <img
-                    src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_fresh-vegetables-fnv_Storefront_m_251122_03.jpg">
-                <img
-                    src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_cuts-sprouts-fnv_Storefront_m_251122_04.jpg">
-                <img
-                    src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_exotic-fruits-fnv_Storefront_m_251122_05.jpg">
-                <img
-                    src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_herbs-seasonings-fnv_Storefront_m_251122_06.jpg">
+                <a href="products.html"><img
+                    src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_organic-fnc-fnv_Storefront_m_251122_01.jpg"></a>
+              <a href="products.html"><img
+                src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_fresh-fruits-fnv_Storefront_m_251122_02.jpg"></a>  
+              <a href="products.html"><img
+                src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_fresh-vegetables-fnv_Storefront_m_251122_03.jpg"></a>  
+               <a href="products.html"><img
+                src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_cuts-sprouts-fnv_Storefront_m_251122_04.jpg"></a> 
+              <a href="products.html"> <img
+                src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_exotic-fruits-fnv_Storefront_m_251122_05.jpg"></a> 
+              <a href="products.html"> <img
+                    src="https://www.bigbasket.com/media/customPage/b01eee88-e6bc-410e-993c-dedd012cf04b/79e284b5-4eb8-4e08-b32f-de87a6dcb369/e5ea2843-187e-41ca-a9ab-17c20bc8d463/hp_herbs-seasonings-fnv_Storefront_m_251122_06.jpg"></a> 
             </div>
         </div>
 
